# SDL2_TD

./: .gitignore  CMakeLists.txt
assets/ui/levelSelect/: liquidSprite.json  redIdle.json  wIdle.json
engine/: AssetManager.hpp  Game.hpp  StateManager.hpp  UISprites.hpp
game/: Menu.hpp  Systems.hpp  VerticalLayout.hpp
game/states/: GameState.hpp  MenuState.hpp  PauseState.hpp
game/ui/: AnimatedBackGround.hpp  PixelRevealEffect.hpp  UIButton.hpp
src/: game  main.cpp
src/core/: GameContext.hpp  MusicManager.hpp  Utils.hpp
src/states/: GameState.hpp  LevelSelectionState.hpp  MapState.hpp  MenuState.hpp  PauseMenuState.hpp  SandBoxState.hpp
src/states/game/: LevelGraph.hpp  LevelNode.hpp  LevelState.hpp
src/states/menu/: MenuBackground.hpp  MenuButtons.hpp  MenuMusic.hpp  MenuNPC.hpp  MenuTitle.hpp
src/ui/: AnimatedSprite.hpp  PixelButton.hpp  Starfield.hpp  UIButton.hpp  UIElement.hpp
src/ui/animation/: BulleAnimation.hpp  Particles.hpp  PixelRevealAnimation.hpp  PixelRevealTextureAnimation.hpp  ScaleHoverAnimation.hpp  UIAnimation.hpp  UITextureAnimation.hpp
src/ui/petitMenu/: PetitMenu.hpp
src/utils/: GameContext.hpp  StateManager.hpp
